<resources>
    <string name="app_name">Anti Covid</string>
    <string name="profile">Profile</string>
    <string name="add_test_report">Add Test Report</string>
    <string name="my_vaccine_information">Vaccine Information</string>
    <string name="valid_qr_code">QR Code</string>
    <string name="test_reports">Test Reports</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_back">Back</string>
    <string name="action_sign_in">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_acc">Create account</string>
    <string name="address">Address</string>
    <string name="social_sec_id">Social security ID</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="register_title">Create Account</string>
    <string name="no_vaccine_info">We have no information about your vaccination.</string>
    <string name="recently_vaccined_question">Have you recently vaccinated?</string>
    <string name="insert_id_for_vaccine_qr_code">If so please add your vaccine ID in order to generate a permanent QR Code</string>
    <string name="qr_code_created_after_second_dose">Please have in mind that the permanent QR Code is generated when you get the second dosis</string>
    <string name="add_vaccine_id">Add Vaccine ID</string>
    <string name="add_vaccine">Add Vaccine</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="first_dose_date">First dose date</string>
    <string name="second_dose_date">Second dose date</string>
    <string name="institution">Institution</string>
    <string name="accept">Accept</string>
    <string name="accept_terms_of_use">Accept Terms Of Use</string>
    <string name="advanced_features">Advanced Features</string>
    <string name="statistics">Statistics</string>
    <string name="terms_of_use_full_text">
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
        diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
        dolor sit amet.\n
        \n
        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
        laoreet dolore magna aliquam erat volutpat.\n
        \n
        Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
        vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.\n
        \n
        Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
        ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.\n
        \n
        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.\n
        \n
        At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum.
        sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.\n
        \n
        Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
        takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
        justo duo dolores et ea rebum. Stet clita\n
    </string>
    <string name="terms_of_use_header">Terms Of Use</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="save_user">Save user</string>
    <string name="e_mail">E-Mail</string>
    <string name="social_security_id">Social security ID</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="register_button_text"><u>Register</u></string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="social_security_id_hint">Social security id</string>
    <string name="address_hint">Address</string>
    <string name="surename_hint">Surename</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">E-mail</string>
    <string name="password">Password</string>
    <string name="error_empty_fields">At least one field is empty!</string>
    <string name="error_pwd_too_short">Password length has to be at least 8 characters long!</string>
    <string name="error_user_exists">A user with the same E-mail already exists!</string>
    <string name="error_firebase_communication">An error occurred communicating with Firebase!</string>
    <string name="action_cancel_register">Cancel</string>
    <string name="error_no_credentials">No E-Mail or password entered!</string>
    <string name="error_wrong_password">The combination of user and password does not exist!</string>
    <string name="error_secID_lenth">The Social security ID has to be 10 characters long!</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="test_date">Test Date:</string>
    <string name="valid_date">Valid Until:</string>
    <string name="active">Active cases</string>
    <string name="land">Austria</string>
    <string name="cases">Cases</string>
    <string name="death">Death</string>
    <string name="tested">Tested</string>
    <string name="recovered">Recovered</string>
    <string name="population">Population</string>
    <string name="last_update">Last update</string>
    <string name="statistic_error_message">-</string>
    <string name="negative_test_valid_info">A negative test is valid for 48 hours!</string>
    <string name="positive_test_valid_info">A positive test is valid for 14 days! Please remain in quarantine!</string>
    <string name="error_no_user_logged_in">No user logged in!</string>
    <string name="report_added_success">Test report added successfully!</string>
    <string name="changes_saved">Changes have been saved successfully</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="password_does_not_match_criteria">Password does not meet the criteria</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="error_fill_out_filds">You have to fill in the fields beforehand!</string>
    <string name="password_requirements"> - at least 8 characters long \n- must not match your old password</string>
    <string name="save">Save</string>
    <string name="antigen_test">ANTIGEN - Test</string>
    <string name="test_date_info">Test date: </string>
    <string name="valid_until_info">Valid until:</string>
    <string name="result_info">Result: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_report_question">Are you sure to delete the following Test Report?</string>
    <string name="report_delete_success">Test report deleted successfully!</string>
    <string name="no_test_report_found">No test reports!\nSwipe down to refresh!</string>
    <string name="show_only_valid_test_reports">Show only valid test reports</string>
    <string name="important_informations">Important information</string>
    <string name="info_hotline">When you have any questions call the 24h information hotline 0800 55 621</string>
    <string name="info_doctor">Call ahead before visiting your doctor!</string>
    <string name="info_stay_home">Stay at home for 2 weeks!</string>
    <string name="info_separate">Separate yourself from other people! Avoid sharing personal household items!</string>
    <string name="info_clean_hands">Clean your hands often!</string>
    <string name="info_clean_surface">Clean all, high-touch , surface everyday!</string>
    <string name="additional_info">If you get one or more signs of heavy infection, which would be difficulty to breath, a fever, coughing badly or shortness of breathing don\'t hesitate to call ambulance (144)!</string>
    <string name="informationAndRules">Current Informations and Rules</string>
    <string name="infected">Infected</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="country">Country</string>
    <string name="vaccinated">"Vaccinated: "</string>
    <string name="ok">OK</string>
    <string name="updated_vaccination">Vaccination updated successfully!</string>
    <string name="error_second_date_before">Second dose must be after first dose!</string>
</resources>