<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/logo_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:layout_weight="3"
            android:src="@mipmap/ic_launcher" />

        <Space
            android:layout_width="0dp"
            android:layout_height="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/app_name" />

    </LinearLayout>


    <Button
        android:id="@+id/button_profile"
        style="@style/Homescreen_button"
        android:text="@string/profile"
        app:layout_constraintBottom_toTopOf="@+id/button_vaccine_info"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/button_add_test_report"
        style="@style/Homescreen_button"
        android:text="@string/add_test_report"
        app:layout_constraintBottom_toTopOf="@+id/button_previous_test_reports"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/button_vaccine_info"
        style="@style/Homescreen_button"
        android:layout_marginTop="8dp"
        android:text="@string/my_vaccine_information"
        app:layout_constraintBottom_toTopOf="@+id/button_valid_qr_code"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <Button
        android:id="@+id/button_previous_test_reports"
        style="@style/Homescreen_button"
        android:text="@string/my_previous_test_reports"
        app:layout_constraintBottom_toTopOf="@+id/button_valid_qr_code"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_valid_qr_code"
        style="@style/Homescreen_button"
        android:text="@string/valid_qr_code"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>